<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Self-Hosted GPS Tracker</string>
    
    <string name="button_toggle">Tracking</string>
    <string name="button_toggle_start">Start</string>
    <string name="button_toggle_stop">Stop</string>
    
    <string name="hint_url">http(s)://server/path</string>
    
    <string name="menu_settings">Settings</string>
    
    <string name="pref_gps_updates">GPS Updates (seconds)</string>
    <string name="pref_gps_updates_summary">Update GPS position approximately every… (30 seconds minimum)</string>
    <string name="pref_gps_updates_too_low">Sorry, this value is too low</string>

    <string name="pref_max_run_time">Max run time (hours)</string>
    <string name="pref_max_run_time_summary">(defaults to 24 hours)</string>
    <string name="pref_max_run_time_too_low">Sorry, this value is lower than GPS updates</string>
    
    <string name="text_legend_url_0">Send GPS coordinates to :</string>
    <string name="text_legend_url_1">Example: http://herverenault.fr/gps</string>
    <string name="text_legend_url_2">latitude and longitude added automatically</string>
    <string name="text_legend_url_3">as in http://herverenault.fr/gps?lat=…&amp;lon=…</string>
    
    <string name="text_network_status">Unknown network status</string>
    <string name="text_network_status_enabled">Network enabled</string>
    <string name="text_network_status_disabled">Warning ! Network disabled</string>
    
    <string name="text_gps_status">Unknown GPS status</string>
    <string name="text_gps_status_enabled">GPS enabled</string>
    <string name="text_gps_status_disabled">Warning ! GPS disabled !</string>
    
    <string name="text_running_since">Running since</string>
    <string name="text_stopped_on">Stopped on</string>
    
    <string name="toast_started">Started</string>
	<string name="toast_stopped">Stopped</string>
	<string name="toast_service_running">Tracking is on</string>
	<string name="toast_service_stopped">Tracking is off</string>
	<string name="toast_prefs_restart">Don\'t forget to restart tracking !</string>
</resources>